# syuichi

./: .devcontainer.json  .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-entrypoint.sh  index.html  manage.py  package.json  pyproject.toml  requirements.txt  tsconfig.tsbuildinfo  vite.config.ts
src/: const.ts  main.ts
src/client/: index.ts
src/client/models/: AttachNetwork.ts  AuthToken.ts  DettachNetwork.ts  GetNetwork.ts  Group.ts  Machine.ts  MachineTypeEnum.ts  Network.ts  PatchedGroup.ts  PatchedMachine.ts  PatchedNetwork.ts  PatchedUser.ts  User.ts
src/client/services/: GroupsService.ts  MachinesService.ts  NetworksService.ts  TokenService.ts  UsersService.ts
src/components/: ComponentMachine.vue  ComponentNetwork.vue  ComponentNetworkEdge.vue  ContextMenu.vue  WorkspaceComponentsTab.vue  WorkspaceEditor.vue  WorkspaceSettingDialog.vue  WorkspaceView.vue
src/layouts/default/: AppBar.vue
src/models/: Machine.ts  Network.ts  NetworkEdge.ts  Server.ts
src/plugins/: index.ts
src/router/: index.ts
src/utils/: AuthUtils.ts
src/views/: Home.vue  Workspace.vue  WorkspaceEditor.vue
syuichi/: .devcontainer.json  Dockerfile  asgi.py  docker-entrypoint.sh  openapi.yaml  settings.py  urls.py  wsgi.py
syuichi/dockerctrl/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
syuichi/dockerctrl/migrations/: 0001_initial.py  0002_machine_machine_type.py  0003_machine_owner_alter_machine_description_and_more.py  0006_network_gateway.py  (+6 more)
syuichi/static/: index.html
syuichi/templates/: index.html
(+41 files in other folders)
